--- a/index.html
+++ b/index.html
@@ -2058,7 +2058,7 @@
                 doc.setTextColor(255, 255, 255);
                 doc.setFontSize(24);
                 doc.setFont("helvetica", "bold");
-                doc.text("Pépins de tomates", 105, 25, { align: "center" });
+                doc.text("Pépins de t🍅mates", 105, 25, { align: "center" });
 
                 doc.setTextColor(45, 52, 54);
                 doc.setFontSize(12);
