--- a/index.html
+++ b/index.html
@@ -2058,12 +2058,12 @@
                 doc.setTextColor(255, 255, 255);
                 doc.setFontSize(24);
                 doc.setFont("helvetica", "bold");
-                doc.text("Pépins de t🍅mates", 105, 25, { align: "center" });
+                doc.text("Pépins de Tomates", 105, 25, { align: "center" });
 
                 doc.setTextColor(45, 52, 54);
                 doc.setFontSize(12);
                 doc.setFont("helvetica", "normal");
-                doc.text(`Date : ${date}`, 20, 55);
+                doc.text(`Date et heure : ${date}`, 20, 55);
                 doc.text(`Client : ${prenom} ${nom}`, 20, 62);
                 
                 doc.setDrawColor(214, 48, 49);
@@ -2072,7 +2072,7 @@
 
                 doc.setFontSize(14);
                 doc.setFont("helvetica", "bold");
-                doc.text("Récapitulatif de la commande", 20, 80);
+                doc.text("Commande :", 20, 80);
                 
                 doc.setFontSize(11);
                 doc.setFont("helvetica", "normal");
