Revise user profile HTML structure and styles
Updated user profile form and styles.

--- a/user.html
+++ b/user.html
@@ -73,7 +73,7 @@
 
     <div class="container">
         <h1>Qui êtes-vous ?</h1>
-        <p>Afin de valider votre commande et générer votre bon, merci de renseigner votre identité.</p>
+        <p>Nous aimerions en savoir d'avantage sur vous !!</p>
         
         <form id="user-form">
             <div class="input-group">
