--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
         <div class="settings-btn" onclick="app.toggleModal('settings-modal')" title="Paramètres">
             <svg viewBox="0 0 24 24"><path d="M19.14,12.94c0.04-0.3,0.06-0.61,0.06-0.94c0-0.32-0.02-0.64-0.07-0.94l2.03-1.58c0.18-0.14,0.23-0.41,0.12-0.61 l-1.92-3.32c-0.12-0.22-0.37-0.29-0.59-0.22l-2.39,0.96c-0.5-0.38-1.03-0.7-1.62-0.94L14.4,2.81c-0.04-0.24-0.24-0.41-0.48-0.41 h-3.84c-0.24,0-0.43,0.17-0.47,0.41L9.25,5.35C8.66,5.59,8.12,5.92,7.63,6.29L5.24,5.33c-0.22-0.08-0.47,0-0.59,0.22L2.74,8.87 C2.62,9.08,2.66,9.34,2.86,9.48l2.03,1.58C4.84,11.36,4.81,11.69,4.81,12s0.02,0.64,0.07,0.94l-2.03,1.58 c-0.18,0.14-0.23,0.41-0.12,0.61l1.92,3.32c0.12,0.22,0.37,0.29,0.59,0.22l2.39-0.96c0.5,0.38,1.03,0.7,1.62,0.94l0.36,2.54 c0.05,0.24,0.24,0.41,0.48,0.41h3.84c0.24,0,0.44-0.17,0.47-0.41l0.36-2.54c0.59-0.24,1.13-0.56,1.62-0.94l2.39,0.96 c0.22,0.08,0.47,0,0.59-0.22l1.92-3.32c0.12-0.22,0.07-0.47-0.12-0.61L19.14,12.94z M12,15.6c-1.98,0-3.6-1.62-3.6-3.6 s1.62-3.6,3.6-3.6s3.6,1.62,3.6,3.6S13.98,15.6,12,15.6z"/></svg>
         </div>
-        <div class="cart-trigger-btn" onclick="app.renderCartPage()" title="Liste">
+        <div class="cart-trigger-btn" onclick="app.renderCartPage()" title="Panier">
             <svg viewBox="0 0 24 24"><path d="M7 18c-1.1 0-1.99.9-1.99 2S5.9 22 7 22s2-.9 2-2-.9-2-2-2zM1 2v2h2l3.6 7.59-1.35 2.45c-.16.28-.25.61-.25.96 0 1.1.9 2 2 2h12v-2H7.42c-.14 0-.25-.11-.25-.25l.03-.12.9-1.63h7.45c.75 0 1.41-.41 1.75-1.03l3.58-6.49c.08-.14.12-.31.12-.48 0-.55-.45-1-1-1H5.21l-.94-2H1zm16 16c-1.1 0-1.99.9-1.99 2s.89 2 1.99 2 2-.9 2-2-.9-2-2-2z"/></svg>
             <span id="cart-count" class="cart-badge" style="display:none">0</span>
         </div>
@@ -887,8 +887,8 @@
                 const trans = db.transaction("cart", "readwrite");
                 trans.objectStore("cart").delete(id);
                 trans.oncomplete = () => {
-                    // Si on est sur la page liste dédiée, on rafraîchit la page
-                    if(document.querySelector('.details-view h1')?.innerText === "Ma liste📋") {
+                    // Si on est sur la page panier dédiée, on rafraîchit la page
+                    if(document.querySelector('.details-view h1')?.innerText === "Mon Panier 🧺") {
                         this.renderCartPage();
                     } else {
                         this.renderCart();
@@ -901,7 +901,7 @@
                 const trans = db.transaction("cart", "readwrite");
                 trans.objectStore("cart").clear();
                 trans.oncomplete = () => {
-                    if(document.querySelector('.details-view h1')?.innerText === "Ma liste📋") {
+                    if(document.querySelector('.details-view h1')?.innerText === "Mon Panier 🧺") {
                         this.renderCartPage();
                     } else {
                         this.renderCart();
@@ -1259,13 +1259,13 @@
             async reloadLastOrder() {
                 const lastNum = localStorage.getItem('lastOrderNumber');
                 if(!lastNum) {
-                    alert("Aucune Liste récente trouvée.");
+                    alert("Aucune commande récente trouvée.");
                     return;
                 }
                 // Extraire les IDs (tout ce qui est numérique)
                 const ids = lastNum.split(/[a-z]/).filter(x => x !== "").map(Number);
                 
-                // Vider la liste actuelle et re-remplir
+                // Vider le panier actuel et re-remplir
                 const trans = db.transaction("cart", "readwrite");
                 const store = trans.objectStore("cart");
                 store.clear();
