--- a/index.html
+++ b/index.html
@@ -1233,7 +1233,7 @@
                     </div>
                     <div class="action-row" style="margin-top:1rem; gap:10px; flex-wrap:wrap;">
                         <button class="btn btn-like" style="flex:1; min-width:200px" onclick="app.showQRCode()">QR code de la liste</button>
-                        <button class="btn btn-order" style="flex:1; min-width:200px" onclick="window.open('https://m.me/pepins.de.tomates.2023', '_blank')">Finaliser l'échange via Messenger</button>
+                        <button class="btn btn-order" style="flex:1; min-width:200px" onclick="window.open('htpps://m.me/christophe.duval.31149', '_blank')">Finaliser l'échange via Messenger</button>
                     </div>
                     
                     <div class="pdf-form-container">
