Add privacy notice to user profile form
Updated user profile form to include privacy notice about localStorage data handling.

--- a/user.html
+++ b/user.html
@@ -73,7 +73,7 @@
 
     <div class="container">
         <h1>Qui êtes-vous ?</h1>
-        <p>Nous aimerions en savoir d'avantage sur vous !!</p>
+        <p>Les données saisies dans votre profil sont stockées uniquement localement sur votre propre navigateur (localStorage). Nous ne recevons, ne stockons, ni ne vendons aucune de vos données personnelles </p>
         
         <form id="user-form">
             <div class="input-group">
