Update print statement to say 'Goodbye World'
ff

--- a/index.html
+++ b/index.html
@@ -746,7 +746,7 @@
                 <ul>
                     <li>Consulter vos données (visibles dans votre Profil).</li>
                     <li>Rectifier vos données.</li>
-                    <li><strong>Supprimer toutes vos données :</strong> Un bouton "Supprimer toutes mes données" est disponible dans les Paramètres (`set.html`). Cette action vide immédiatement le LocalStorage de votre navigateur pour ce site.</li>
+                    <li><strong>Supprimer toutes vos données :</strong> Un bouton "Supprimer toutes mes données" est disponible dans les <a href="set.html">Paramètres</a>. Cette action vide immédiatement le LocalStorage de votre navigateur pour ce site.</li>
                 </ul>
 
                 <h3>4. Contact DPO</h3>
