Update print statement from 'Hello' to 'Goodbye'
ff

--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@
                             <input type="text" id="pdf-prenom" placeholder="Votre Prénom" value="${userPrenom}" style="width:100%; padding:10px; margin-bottom:10px; border-radius:8px; border:1px solid #ddd;">
                             
                             <button class="btn btn-cart" onclick="app.generatePDF()">📥 Télécharger ma Liste (PDF)</button>
-                            <a href="mailto:chpalitom09@gmail.com?subject=Demande d'échange de graines" class="btn btn-order" style="display:block; text-align:center; margin-top:10px; text-decoration:none;">📧 Envoyer un mail à Christophe</a>
+                            <a href="https://m.me/christophe.duval.31149" class="btn btn-order" style="display:block; text-align:center; margin-top:10px; text-decoration:none;">📧 Envoyer un message à Christophe</a>
                         </div>`;
                 }
                 this.viewport.innerHTML = html + `</div>`;
