--- a/index.html
+++ b/index.html
@@ -563,9 +563,31 @@
             #cookie-banner { flex-direction: row; align-items: center; justify-content: space-between; }
         }
         .cookie-btns { display: flex; gap: 10px; flex-wrap: wrap; }
+		/* Style pour le bouton Menu flottant ou dans la barre */
+.btn-menu-home {
+    position: fixed;
+    top: 20px;
+    left: 20px;
+    z-index: 1001;
+    background: var(--accent);
+    color: white;
+    padding: 10px 20px;
+    border-radius: 25px;
+    text-decoration: none;
+    font-weight: 600;
+    box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    transition: transform 0.2s;
+}
+.btn-menu-home:hover { transform: scale(1.05); }
     </style>
 </head>
 <body>
+<a href="menu.html" class="btn-menu-home">
+    <span>🏠</span> Menu Principal
+</a>
 
     <button id="scroll-top" class="scroll-top-btn" onclick="window.scrollTo({top:0, behavior:'smooth'})">↑</button>
 
