--- a/menu.html
+++ b/menu.html
@@ -143,7 +143,7 @@
     </section>
 
     <div class="features">
-        <a href="list.html" style="text-decoration: none; color: inherit;">
+        <a href="index.html" style="text-decoration: none; color: inherit;">
             <div class="feature-card">
                 <span class="icon">📖</span>
                 <h3>La Bibliothèque</h3>
@@ -175,7 +175,7 @@
             <div class="footer-section">
                 <h4>Navigation</h4>
                 <ul>
-                    <li><a href="list.html">Catalogue des tomates</a></li>
+                    <li><a href="index.html">Catalogue des tomates</a></li>
                     <li><a href="user.html">Mon Profil</a></li>
                     <li><a href="set.html">Paramètres & Thème</a></li>
                 </ul>
